fix: cart modal z-index

--- a/src/Components/Items/Cart.css
+++ b/src/Components/Items/Cart.css
@@ -1,3 +1,9 @@
+.ReactModalPortal {
+  position: relative;
+  z-index: 103;
+
+}
+
 .slide-pane {
   display: flex;
   flex-direction: column;
@@ -7,6 +13,7 @@
   box-shadow: 0 8px 8px rgba(0, 0, 0, 0.5);
   transition: transform 0.5s;
   will-change: transform;
+  position: relative;
 }
 
 .slide-pane:focus {
